[package]
name = "websocket-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["ws"] }
chrono = "0.4.42"
futures = "0.3.31"
reqwest = { version = "0.12.26", features = ["json", "stream"] }
serde = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tokio-tungstenite = "0.28.0"
uuid = { version = "1.19.0", features = ["v4", "fast-rng"] }
